# NetEase4Horizon6

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  README.md
.github/workflows/: release.yml
src/: audio.rs  config.rs  installer.rs  main.rs  server.rs
